<resources>
    <string name="app_name">imsdk</string>

    <!-- 修改密码 -->
    <string name="old_password_invalid">Sorry, the old password you input is invalid.</string>
    <string name="old_password_incorrect">Sorry, the old password you input is in`correct.</string>
    <string name="new_password_nil">Sorry, the new password you input is less than 1 characters.</string>
    <string name="password_not_match">Sorry, the two passwords you input don\'t match.</string>
    <string name="password_same">New password is the same as old password.</string>
    <string name="change_password_failed">Change password failed!</string>
    <string name="change_password_success">Your password has been changed!</string>

    <!-- chat -->
    <string name="chatfooter_cancel_rcd">Move up to cancel</string>
    <string name="chatfooter_cancel_rcd_release">Release to cancel</string>
    <string name="chatfooter_too_short">Message too short</string>


    <!-- message for contact status -->
    <string name="contact_status_msg_online">在线</string>
    <string name="contact_status_msg_free_to_chat">待聊</string>
    <string name="contact_status_msg_away">离开</string>
    <string name="contact_status_msg_dnd">请勿打扰</string>
    <string name="contact_status_msg_offline">离线</string>
    <string name="contact_status_msg_xa">不可用</string>

    <string name="chat_footer_switch_mode_btn">Switch between Hold to Talk and keyboard</string>
    <string name="chatfooter_presstorcd">Hold to Talk</string>


    <string name="chat_footer_smiley_btn">Sticker</string>
    <string name="chat_footer_app_btn">More</string>
    <string name="chatting_send">Send</string>
</resources>
