<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/chat_input_bg"
    android:gravity="center_vertical"
    android:minHeight="53.33dip"
    android:orientation="horizontal"
    android:paddingBottom="6.67dip"
    android:paddingLeft="6.67dip"
    android:paddingRight="6.67dip"
    android:paddingTop="6.67dip">

    <ImageButton
        android:id="@+id/btn_input_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8.0dip"
        android:layout_marginRight="11.0dip"
        android:background="@null"
        android:contentDescription="@string/chat_footer_switch_mode_btn"
        android:src="@drawable/chat_btn_input_audio" />

    <com.agmbat.imsdk.view.RecordButton
        android:id="@+id/btn_input_audio"
        android:layout_width="match_parent"
        android:layout_height="34.0dp"
        android:layout_marginLeft="4.0dip"
        android:layout_marginRight="4.0dip"
        android:layout_weight="1.0"
        android:background="@drawable/im_voice_rcd_btn"
        android:soundEffectsEnabled="true"
        android:text="@string/chatfooter_presstorcd"
        android:textColor="@color/footer_text_color"
        android:textSize="16.0dip"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/text_panel_ll"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="4.0dip"
        android:layout_weight="1.0"
        android:background="@drawable/chat_edit_bg"
        android:minHeight="34.0dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/chatting_content_et"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@null"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="4"
            android:minHeight="28.0dip"
            android:singleLine="false"
            android:textColor="#ff000000"
            android:textColorHint="#ffd7d7d7"
            android:textSize="16.0dip" />

        <ImageButton
            android:id="@+id/btn_input_emoji"
            android:layout_width="32.0dip"
            android:layout_height="32.0dip"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/chat_footer_smiley_btn"
            android:padding="8.0dip"
            android:src="@drawable/chat_btn_input_emoji" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageButton
            android:id="@+id/chatting_attach_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/chat_footer_app_btn"
            android:gravity="center"
            android:paddingLeft="5.0dip"
            android:paddingRight="5.0dip"
            android:src="@drawable/chat_btn_input_more"
            android:visibility="gone" />

        <Button
            android:id="@+id/chatting_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="32.0dip"
            android:layout_gravity="center"
            android:background="@drawable/chat_btn_input_send"
            android:gravity="center"
            android:minWidth="44.0dip"
            android:text="@string/chatting_send"
            android:textColor="@color/footer_text_color"
            android:textSize="14.0dip" />
    </FrameLayout>

</LinearLayout>